--- a/eproject.css
+++ b/eproject.css
@@ -123,6 +123,8 @@ section{
 #hero-section {
             
     background-image: url(/images/successful-college-student-lg.png);
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
